[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "PythonExtensions"
dynamic = ["version"]
description = "Strongly typed classes with multiple built in helper functions to speed up development."
readme = "README.md"
license = "MIT"
authors = [
    { name = "Tyler Stegmaier", email = "tyler.stegmaier.510@gmail.com" },
]
maintainers = [
    { name = "Tyler Stegmaier", email = "tyler.stegmaier.510@gmail.com" },
]
keywords = [
    "Case",
    "Extensions",
    "Json",
    "PythonExtensions",
    "Setup",
    "Switch",
    "SwitchCase",
    "Tkinter",
    "tk",
    "tkinter",
    "ttk",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development :: Build Tools",
    "Typing :: Typed",
]
dependencies = [
    "aiofiles>=22.1.0",
    "aiohttp>=3.8.3",
    "attr>=0.3.2",
    "cattrs>=22.2.0",
    "cryptography>=38.0.1",
    "multidict>=6.0.2",
    "pillow>=9.2.0",
    "prettyprinter>=0.18.0",
    "psutil>=5.9.3",
    "requests>=2.28.1",
    "tk_html_widgets>=0.4.0",
    "yarl>=1.8.1",
]

[project.urls]
Homepage = "https://github.com/Jakar510/PythonExtensions"

[tool.hatch.version]
path = "pythonextensions/__version__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/PythonExtensions",
]
